--- a/src/app/pages/college/equipments-page/equipments-page.component.html
+++ b/src/app/pages/college/equipments-page/equipments-page.component.html
@@ -41,7 +41,7 @@
                                   <td class="text-right">
                                       <a [routerLink]="['/equipments/edit/', equipment.id]" class="btn btn-info"><i
                                               class="fa fa-edit"></i></a> &nbsp;
-                                      <button data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                                      <button (click)="delete(equipment.id)" data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
                                   </td>
                               </tr>
                           </tbody>
