--- a/src/app/pages/college/block-page/block-page.component.html
+++ b/src/app/pages/college/block-page/block-page.component.html
@@ -42,7 +42,7 @@
                                     <td class="text-right">
                                         <a [routerLink]="['/blocks/edit/', block.id]" class="btn btn-info"><i
                                                 class="fa fa-edit"></i></a> &nbsp;
-                                        <button data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                                        <button (click)="delete(block.id)" data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
                             </tbody>
