changing end-point

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="brand">
-		<a [routerLink]="['/']"><img src="assets/img/logo-dark.png" alt="Klorofil Logo" class="img-responsive logo"></a>
+		<!-- <a [routerLink]="['/']"><img src="assets/img/logo-dark.png" alt="Klorofil Logo" class="img-responsive logo"></a> -->
+		<a [routerLink]="['/']"><span style="font-size: large; color: #000;">ClassRoom Space!</span></a>
 	</div>
 	<div class="container-fluid">
 		<div class="navbar-btn">
@@ -10,7 +11,7 @@
 		<div id="navbar-menu">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/user.png"
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="https://avatars1.githubusercontent.com/u/37885435?s=400&u=c54b416635396938859247d197a6cfd58e11c42e&v=4"
 							class="img-circle" alt="Avatar"><span>Seja bem-vindo(a), {{ user?.name }} </span> <i
 							class="icon-submenu lnr lnr-chevron-down"></i></a>
 					<ul class="dropdown-menu">
