--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -5,7 +5,8 @@
       <div class="left">
         <div class="content">
           <div class="header">
-            <div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div>
+            <!-- <div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div> -->
+            <div class="logo text-center"><h3>ClassRoom Space!</h3></div>
             <p class="lead">Faça login na sua conta</p>
           </div>
 
